[gd_scene load_steps=4 format=3 uid="uid://cps1lnesyj8ih"]

[ext_resource type="Script" uid="uid://tsa4fgptbv1q" path="res://scenes/main_scene/GameManager.gd" id="1_6iw8k"]
[ext_resource type="PackedScene" uid="uid://bjwb0t72n8jr0" path="res://scenes/player_ui/player_ui.tscn" id="2_o5t4i"]
[ext_resource type="PackedScene" uid="uid://c5vbbmhud488e" path="res://scenes/inventory/inv_panel/inv_panel.tscn" id="3_34m6u"]

[node name="MainScene" type="Node2D"]
script = ExtResource("1_6iw8k")

[node name="LevelRoot" type="Node2D" parent="."]

[node name="player_ui" parent="." instance=ExtResource("2_o5t4i")]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="inventory" parent="CanvasLayer" instance=ExtResource("3_34m6u")]
offset_left = 1.0
offset_top = 29.0
offset_right = 111.0
offset_bottom = 77.0

[connection signal="item_taken" from="." to="CanvasLayer/inventory" method="_on_main_scene_item_taken"]
[connection signal="use_item" from="CanvasLayer/inventory" to="." method="_on_inventory_use_item"]
